fix: fix styling bug on mobile with input fields

--- a/src/style.css
+++ b/src/style.css
@@ -390,7 +390,7 @@
   
     .user-details-div input,
     .user-details-div select {
-      width: 100px;
+      width: 80vw;
     }
   }
   
